--- a/styles.css
+++ b/styles.css
@@ -34,11 +34,13 @@ a {
 header {
     background-color: #1f2937;
     color: #e5e7eb;
-    border-bottom: 1px solid #e7e9fc;
+   
+}
+header {border-bottom: 1px solid #e7e9fc;
 }
 
-.header-container {
-    display: flex;
+.header-container-container{
+   display: flex;
     align-items: center;
     justify-content: space-between;
     margin: 0 auto;
@@ -69,6 +71,9 @@ header {
 .nav-links {
     display: flex;
     gap: 40px;
+}
+.nav-item {
+    padding: 24px 0;
 }
 
 .nav-link-studio,
