--- a/styles.css
+++ b/styles.css
@@ -211,36 +211,57 @@ header {border-bottom: 1px solid #e7e9fc;
     color: #434455;
 }
 /* 3. Bölüm Section */
-.section-three {
+.team-section {
     padding: 120px 0;
-}
-
-.section-three .container {
+    background-color: #f4f4fd;
     text-align: center;
 }
 
-.section-three h2 {
-    visibility: hidden;
-    position: absolute;
-    height: 1px;
-    width: 1px;
-    overflow: hidden;
-    clip: rect(1px, 1px, 1px, 1px);
-    white-space: nowrap;
+.team-title{
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #2e2f42;
+    margin-bottom: 72px;
 }
 
-.section-three ul {
+.team-list {
     display: flex;
     gap: 24px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
-.section-three ul li {
-    width: calc((100% - 72px) / 4);
+.team-member {
+    background-color: #ffffff;
+    border-radius: 0px 0px 4px 4px;
+    flex-basis: calc((100% - 3 * 24px) / 4);
 }
 
-.section-three ul li h3 {
+.member-details {
+    padding: 32px 0;
+    text-align: center;
+}
+
+.team-member-title{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
     margin-bottom: 8px;
 }
+
+.team-member-role {
+    font-size: 16px;
+    letter-spacing: 0.02em;
+    line-height: 1.5;
+    color: #434455;
+}
+
 
 /* 4. Bölüm Section */
 .section-four {
