--- a/styles.css
+++ b/styles.css
@@ -264,35 +264,63 @@ header {border-bottom: 1px solid #e7e9fc;
 
 
 /* 4. Bölüm Section */
-.section-four {
+.app-section {
     padding: 120px 0;
-}
+  }
 
-.section-four .container {
+  .title-class {
+    font-size: 36px;
+    line-height: 1.11;
     text-align: center;
-}
-
-.section-four h2 {
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #2e2f42;
     margin-bottom: 72px;
-}
-
-.section-four ul {
+  }
+  .app-list {
     display: flex;
     flex-wrap: wrap;
     column-gap: 24px;
     row-gap: 48px;
-}
-
-.section-four ul li {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .app-item {
     width: calc((100% - 72px) / 4);
-}
-
-.section-four ul li div {
+    text-align: center;
+  }
+  .app-item img {
+    width: 360px;
+    border-radius: 8px;
+  }
+  
+  .subtitle-class {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    margin-top: 16px;
+  }
+  
+  .text-class {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+    margin-top: 8px;
+  }
+  
+  /* List item container styles */
+  .app-item > div {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
     margin-bottom: 8px;
-}
+  }
+  
 .site-footer {
     padding: 100px 0;
     background-color: #2e2f42; /* Arka plan rengi */
