--- a/styles.css
+++ b/styles.css
@@ -135,8 +135,9 @@ header {border-bottom: 1px solid #e7e9fc;
 
 /* 1. Main Section */
 
+  
 .main-section {
-    padding: 188px 0;
+    padding: 24px 0;
     background-color: #2e2f42;
 }
 
@@ -267,6 +268,10 @@ header {border-bottom: 1px solid #e7e9fc;
 .app-section {
     padding: 120px 0;
   }
+  .container {
+    margin: 0 auto;
+    max-width: 1200px;
+  }
 
   .title-class {
     font-size: 36px;
@@ -296,31 +301,27 @@ header {border-bottom: 1px solid #e7e9fc;
     border-radius: 8px;
   }
   
-  .subtitle-class {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    margin-top: 16px;
-  }
-  
-  .text-class {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-    margin-top: 8px;
-  }
-  
-  /* List item container styles */
-  .app-item > div {
+  .app-info {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
     margin-bottom: 8px;
-  }
-  
+}
+    .subtitle-class {
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+        margin-top: 16px;
+      }
+      .text-class{
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #434455;
+        margin-top: 8px;
+      }
 .site-footer {
     padding: 100px 0;
     background-color: #2e2f42; /* Arka plan rengi */
