--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ img {
 
 /* Header */
 header {
-    background-color: #1f2937;
+    background-color: #ffffff;
     color: #e5e7eb;
    
 }
@@ -71,14 +71,13 @@ header {border-bottom: 1px solid #e7e9fc;
 .nav-bar {
     display: flex;
     align-items: center; 
+    padding: 24px 0;
 }
 .nav-links {
     display: flex;
     gap: 40px;
 }
-.nav-item {
-    padding: 24px 0;
-}
+
 
 .nav-link-studio,
 .nav-link-portfolio,
@@ -137,7 +136,7 @@ header {border-bottom: 1px solid #e7e9fc;
 
   
 .main-section {
-    padding: 24px 0;
+    padding: 188px 0;
     background-color: #2e2f42;
 }
 
@@ -269,8 +268,10 @@ header {border-bottom: 1px solid #e7e9fc;
     padding: 120px 0;
   }
   .container {
-    margin: 0 auto;
+    margin-bottom:8px;
     max-width: 1200px;
+    
+
   }
 
   .title-class {
@@ -293,7 +294,7 @@ header {border-bottom: 1px solid #e7e9fc;
   }
   
   .app-item {
-    width: calc((100% - 72px) / 4);
+    flex-basis: calc((100% - 3 * 24px) / 4)
     text-align: center;
   }
   .app-item img {
